# software-factory-security-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/8090-design/: SKILL.md
.claude/skills/client-deliverable-checklist/: SKILL.md
.claude/skills/codex-code-review/: SKILL.md
.claude/skills/cp-writing-style/: SKILL.md  core-principles.md  format-annual-letters.md  format-customer-briefs.md  format-emails.md  format-internal-team-emails.md  format-learn-with-me.md  format-policy-ideas.md  quick-reference.md
.claude/skills/cto-advisor/: SKILL.md
.claude/skills/deslop/: SKILL.md
.claude/skills/docx-build-verify/: SKILL.md
.claude/skills/dompe-status/: SKILL.md
.claude/skills/evidence-gated-exhibit/: SKILL.md
.claude/skills/grilling/: SKILL.md
.claude/skills/meeting-processor/: SKILL.md
.claude/skills/miro-sync-and-ship/: SKILL.md
.claude/skills/no-ai-slop/: SKILL.md
.claude/skills/patent-diagram/: SKILL.md
.claude/skills/plain-writing/: SKILL.md
.claude/skills/prd-eval-codex/: SKILL.md  (+1 more)
.github/workflows/: ci.yml
docs/: architecture.md
docs/diagrams/: lens-overview.mmd
examples/: sample-report.json  sample-report.md  scan-command.sh
kg/software-factory-plugin/: README.md
src/sf_scan/: __init__.py  cache.py  cli.py  derive.py  extract.py  fetch.py  kg.py  models.py  report.py  sf_api.py  swfactory.py  vuln.py
tests/: test_cache.py  test_cli.py  test_derive.py  test_e2e.py  test_e2e_sources.py  test_extract.py  test_fetch.py  test_kg.py  test_report.py  test_sf_api.py  test_swfactory.py  test_vuln.py
(+69 files in other folders)
