[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-scan"
version = "0.1.0"
description = "Software Factory Security Scanner — Lens 1 (dependency vulnerabilities mapped to a Knowledge Graph)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Satwik", email = "msg4satwik@gmail.com" }
]
keywords = ["security", "vulnerability", "software-factory", "dependency-scanning", "knowledge-graph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.scripts]
sf-scan = "sf_scan.cli:main"

[project.urls]
Homepage = "https://github.com/satwik/software-factory-security-scanner"
Issues = "https://github.com/satwik/software-factory-security-scanner/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
